--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "google-adk>=1.18.0",
     "marimo>=0.17.7",
+    "mcp>=1.21.0",
     "python-dotenv>=1.2.1",
 ]
 
